[gd_scene load_steps=18 format=3 uid="uid://bblrb2f6c8rqi"]

[ext_resource type="Script" uid="uid://bs3jxqvtg787n" path="res://scripts/secret_manager.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bbue54p2kyco2" path="res://entities/player.tscn" id="2"]
[ext_resource type="Environment" uid="uid://bf68s7u74uc27" path="res://graphics/school_house_environment.tres" id="3"]
[ext_resource type="Script" uid="uid://dpusay5ffdvmc" path="res://scripts/environment_background.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://bd33nwl0helkn" path="res://entities/objects/door.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://lguomvhjgtsl" path="res://cicname2.jpg" id="7_7ndnm"]
[ext_resource type="AudioStream" uid="uid://k6su8vuin02r" path="res://fucker/recording.mp3" id="8"]
[ext_resource type="Script" uid="uid://ccrepqf67agjy" path="res://sprite1.gd" id="8_u5qoj"]
[ext_resource type="PackedScene" uid="uid://cc2qxgplvp270" path="res://entities/prefab/desk.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cyq48jnvrv5fm" path="res://entities/prefab/chair.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://csq10q5yida6k" path="res://GameIcon.png" id="11"]
[ext_resource type="Script" uid="uid://d4mrjg4llpwaw" path="res://sprite.gd" id="12"]
[ext_resource type="Script" uid="uid://3f5enrggaeyq" path="res://fucker/getmoner.gd" id="13_7ndnm"]
[ext_resource type="PackedScene" uid="uid://dgpebuwf6c0n5" path="res://secret.tscn" id="14_u5qoj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7ndnm"]
radius = 62.6741

[sub_resource type="SpriteFrames" id="SpriteFrames_xnnbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_u5qoj"]
size = Vector3(2.20227, 2.20654, 1.65381)

[node name="Secret" type="Node3D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 46.0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 55)
real_game = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3")
script = ExtResource("4")

[node name="Objects" type="Node3D" parent="."]

[node name="Door" parent="Objects" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 5, 125)
setDoorFrame = 116

[node name="Filename2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.82, 4, 173.27)
billboard = 2
texture_filter = 0
texture = ExtResource("7_7ndnm")
script = ExtResource("8_u5qoj")

[node name="Recording" type="AudioStreamPlayer3D" parent="Filename2"]
stream = ExtResource("8")
unit_size = 60.0
bus = &"Dialogue"

[node name="Ending" type="Area3D" parent="Filename2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Filename2/Ending"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.054039, 0.526188, -28.3728)
shape = SubResource("SphereShape3D_7ndnm")

[node name="Desk" parent="." instance=ExtResource("9")]
transform = Transform3D(0.799825, -0.0240507, 0.599751, -0.578242, -0.298864, 0.759155, 0.160986, -0.953992, -0.252946, -12.7345, 1.42074, 158.101)

[node name="Chair" parent="." instance=ExtResource("10")]
transform = Transform3D(0.930654, 0.3659, 1.5994e-08, 0, -4.37114e-08, 1, 0.3659, -0.930654, -4.06802e-08, 8.41087, 0.961034, 158.358)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 11.0898, 3.14072, 127.803)
billboard = 2
sprite_frames = SubResource("SpriteFrames_xnnbo")
script = ExtResource("12")

[node name="AnimatedSprite3D2" type="AnimatedSprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -20.5725, 3.14072, 127.803)
billboard = 2
sprite_frames = SubResource("SpriteFrames_xnnbo")
script = ExtResource("12")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6218, 4.39884, 140.189)
pixel_size = 0.01
billboard = 1
text = "get free moner here"
script = ExtResource("13_7ndnm")

[node name="Area3D" type="Area3D" parent="Label3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Label3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.601135, -0.603271, -0.326904)
shape = SubResource("BoxShape3D_u5qoj")

[node name="secret" parent="." instance=ExtResource("14_u5qoj")]

[connection signal="finished" from="Filename2/Recording" to="." method="_on_recording_finished"]
[connection signal="body_entered" from="Filename2/Ending" to="." method="_on_ending_body_entered"]
[connection signal="body_entered" from="Label3D/Area3D" to="Label3D" method="_on_area_3d_body_entered"]
